[gd_scene load_steps=24 format=3 uid="uid://csg1emxhlorwf"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_xdynb"]
[ext_resource type="StyleBox" uid="uid://cdks4l1c2vhtw" path="res://Assets/UI/panel_info.tres" id="1_xsqk1"]
[ext_resource type="FontFile" uid="uid://dji5p2gcapptw" path="res://Assets/UI/NewyearCoffee-4nd2D.ttf" id="2_p4epb"]
[ext_resource type="Texture2D" uid="uid://bas6dymsipyv2" path="res://Assets/UI/mm (3).png" id="3_w74ph"]
[ext_resource type="StyleBox" uid="uid://dqutvjhnd0l0t" path="res://Assets/UI/menu_hover_blue.tres" id="4_n3kv8"]
[ext_resource type="StyleBox" uid="uid://b1007c7d3lso6" path="res://Assets/UI/menu_blue.tres" id="5_urxfb"]
[ext_resource type="Texture2D" uid="uid://bju44agtkhxoe" path="res://Assets/UI/spotted-bug.png" id="6_0flr6"]
[ext_resource type="Texture2D" uid="uid://bhxjkdsylr3h8" path="res://Assets/UI/mm (4).png" id="7_eq76w"]
[ext_resource type="Texture2D" uid="uid://b200s38y87ux" path="res://Assets/UI/pencil-brush.png" id="7_ix08y"]
[ext_resource type="Texture2D" uid="uid://7lyq115d0rkf" path="res://Assets/UI/cancel75.png" id="8_bfsx0"]
[ext_resource type="StyleBox" uid="uid://bunu7gyd0flm5" path="res://Assets/UI/menu_hover_red.tres" id="9_d36q2"]
[ext_resource type="StyleBox" uid="uid://ovt2sr7ttmqp" path="res://Assets/UI/menu_red.tres" id="10_t2qt6"]
[ext_resource type="StyleBox" uid="uid://ry4swhay83jf" path="res://Assets/UI/menu_hover_green.tres" id="12_7jrpv"]
[ext_resource type="StyleBox" uid="uid://cym167tr1k6t0" path="res://Assets/UI/menu_green.tres" id="13_1q7ja"]
[ext_resource type="Texture2D" uid="uid://bptmuc4c2esv5" path="res://Assets/UI/play-button (1).png" id="13_6x5u8"]
[ext_resource type="PackedScene" uid="uid://c6ly1mauueubq" path="res://Scenes/options.tscn" id="16_44c10"]
[ext_resource type="PackedScene" uid="uid://drunrktpa2lu3" path="res://Scenes/customise.tscn" id="17_n5ery"]
[ext_resource type="AudioStream" uid="uid://tejb4bspjmme" path="res://Assets/Music/M.MP3" id="17_ora4m"]
[ext_resource type="AudioStream" uid="uid://by52yorlkoepd" path="res://Assets/Music/D.MP3" id="18_tlkf0"]
[ext_resource type="AudioStream" uid="uid://cptms4qpuvuw5" path="res://Assets/Music/F.MP3" id="19_8srqi"]
[ext_resource type="AudioStream" uid="uid://vgsr7yxcqj11" path="res://Assets/Music/T.MP3" id="20_y02xp"]
[ext_resource type="AudioStream" uid="uid://cjdrmuqrn8u3j" path="res://Assets/Music/R.MP3" id="21_y1n3w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bec6m"]
bg_color = Color(1, 1, 1, 0.337255)

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xdynb")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bec6m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -413.0
offset_right = 323.0
offset_bottom = 413.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_xsqk1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -399.0
offset_right = 308.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_p4epb")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("1_xsqk1")
text = "Paused"
horizontal_alignment = 1

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_constants/icon_max_width = 0
theme_override_fonts/font = ExtResource("2_p4epb")
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("3_w74ph")
theme_override_styles/disabled_mirrored = ExtResource("4_n3kv8")
theme_override_styles/disabled = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed = ExtResource("4_n3kv8")
theme_override_styles/hover_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover = ExtResource("4_n3kv8")
theme_override_styles/pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/pressed = ExtResource("4_n3kv8")
theme_override_styles/normal_mirrored = ExtResource("5_urxfb")
theme_override_styles/normal = ExtResource("5_urxfb")
text = "Settings"

[node name="Custom" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_constants/icon_max_width = 0
theme_override_fonts/font = ExtResource("2_p4epb")
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("7_ix08y")
theme_override_styles/disabled_mirrored = ExtResource("4_n3kv8")
theme_override_styles/disabled = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed = ExtResource("4_n3kv8")
theme_override_styles/hover_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover = ExtResource("4_n3kv8")
theme_override_styles/pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/pressed = ExtResource("4_n3kv8")
theme_override_styles/normal_mirrored = ExtResource("5_urxfb")
theme_override_styles/normal = ExtResource("5_urxfb")
text = "Edit Company"

[node name="Bugs" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_p4epb")
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("6_0flr6")
theme_override_styles/disabled_mirrored = ExtResource("4_n3kv8")
theme_override_styles/disabled = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed = ExtResource("4_n3kv8")
theme_override_styles/hover_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover = ExtResource("4_n3kv8")
theme_override_styles/pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/pressed = ExtResource("4_n3kv8")
theme_override_styles/normal_mirrored = ExtResource("5_urxfb")
theme_override_styles/normal = ExtResource("5_urxfb")
text = "Bug report"

[node name="Tutorial" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_p4epb")
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("7_eq76w")
theme_override_styles/disabled_mirrored = ExtResource("4_n3kv8")
theme_override_styles/disabled = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover_pressed = ExtResource("4_n3kv8")
theme_override_styles/hover_mirrored = ExtResource("4_n3kv8")
theme_override_styles/hover = ExtResource("4_n3kv8")
theme_override_styles/pressed_mirrored = ExtResource("4_n3kv8")
theme_override_styles/pressed = ExtResource("4_n3kv8")
theme_override_styles/normal_mirrored = ExtResource("5_urxfb")
theme_override_styles/normal = ExtResource("5_urxfb")
text = "Tutorial"

[node name="Main Menu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_p4epb")
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("8_bfsx0")
theme_override_styles/disabled_mirrored = ExtResource("9_d36q2")
theme_override_styles/disabled = ExtResource("9_d36q2")
theme_override_styles/hover_pressed_mirrored = ExtResource("9_d36q2")
theme_override_styles/hover_pressed = ExtResource("9_d36q2")
theme_override_styles/hover_mirrored = ExtResource("9_d36q2")
theme_override_styles/hover = ExtResource("9_d36q2")
theme_override_styles/pressed_mirrored = ExtResource("9_d36q2")
theme_override_styles/pressed = ExtResource("9_d36q2")
theme_override_styles/normal_mirrored = ExtResource("10_t2qt6")
theme_override_styles/normal = ExtResource("10_t2qt6")
text = "Main Menu"

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_p4epb")
theme_override_font_sizes/font_size = 100
theme_override_icons/icon = ExtResource("13_6x5u8")
theme_override_styles/disabled_mirrored = ExtResource("12_7jrpv")
theme_override_styles/disabled = ExtResource("12_7jrpv")
theme_override_styles/hover_pressed_mirrored = ExtResource("12_7jrpv")
theme_override_styles/hover_pressed = ExtResource("12_7jrpv")
theme_override_styles/hover_mirrored = ExtResource("12_7jrpv")
theme_override_styles/hover = ExtResource("12_7jrpv")
theme_override_styles/pressed_mirrored = ExtResource("12_7jrpv")
theme_override_styles/pressed = ExtResource("12_7jrpv")
theme_override_styles/normal_mirrored = ExtResource("13_1q7ja")
theme_override_styles/normal = ExtResource("13_1q7ja")
text = "Resume"

[node name="Options" parent="." instance=ExtResource("16_44c10")]
visible = false
layout_mode = 1
offset_top = 0.0
offset_bottom = 0.0

[node name="Customise" parent="." instance=ExtResource("17_n5ery")]
visible = false
position = Vector2(0, 540)

[node name="Sounds" type="Node2D" parent="."]
position = Vector2(25, 1060)

[node name="Mouse" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("17_ora4m")
volume_db = 1.0
bus = &"SFX"

[node name="Dullmouse" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("18_tlkf0")
volume_db = 5.5
bus = &"SFX"

[node name="Filmic" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("19_8srqi")
bus = &"SFX"

[node name="Techno" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("20_y02xp")
bus = &"SFX"

[node name="Retro" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("21_y1n3w")
volume_db = -3.0
bus = &"SFX"

[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Custom" to="." method="_on_custom_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Bugs" to="." method="_on_bugs_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
